<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="load_app">LoadApp - Current repo by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="we_are_downloading">we are downloading</string>
    <string name="download_icon">download_icon</string>
    <string name="glide">Glide - Image Library by BumbTech</string>
    <string name="channel_id">download_channel_id</string>
    <string name="file_name">File Name</string>
    <string name="download_state">download state</string>
    <string name="successful">Successful</string>
    <string name="back_home">Back Home</string>
    <string name="ok">ok</string>
    <string name="succeeded">succeeded</string>
    <string name="status">status</string>
    <string name="notification_channel_id">download_channel_id</string>
    <string name="failure">Failure</string>
</resources>
